Verify on homepage

--- a/app/views/static/landing.html.erb
+++ b/app/views/static/landing.html.erb
@@ -69,7 +69,7 @@
           </div>
         </div>
         <div class="columns small-12 medium-6 large-4">
-          <div class="card card--with-icon card--verify card--in-development">
+          <div class="card card--with-icon card--verify">
             <h2>
               <a href="#" class="unstyled">
                 <small>User Authentication</small>
@@ -82,17 +82,20 @@
             </div>
 
             <nav>
-              <a href="#">Overview</a>
+              <a href="/verify">Overview</a>
+              <br>
+              <br>
+              <br>
+              <br>
+              <hr>
+              <br>
+              <!--
               <a href="#">Guides</a>
               <a href="#">Building Blocks</a>
               <a href="#">Tutorials</a>
               <hr>
               <a href="#">API Reference</a>
-
-              <div class="card-in-development">
-                <h3>Sorry</h3>
-                <p>This section of Nexmo Developer is still under development. You can find the documentation at <a href="http://docs.nexmo.com">docs.nexmo.com</a></p>
-              </div>
+              -->
             </nav>
           </div>
         </div>
