--- a/app/assets/stylesheets/_typography.scss
+++ b/app/assets/stylesheets/_typography.scss
@@ -452,6 +452,7 @@ b {
   overflow: hidden;
   margin-bottom: $spacing;
   font-size: 1.2em;
+  background: $white;
 
   .api-path-parameter {
     color: $pink;
