Fix missing closing tag

--- a/app/views/open_api/_parameters.html.erb
+++ b/app/views/open_api/_parameters.html.erb
@@ -29,8 +29,8 @@
         <td class="center">
           <%=
             parameter['required'] ?
-            '<i class="icon icon--large icon-check-circle color--success">'.html_safe
-            : '<i class="icon icon--large icon-times-circle color--error">'.html_safe
+            '<i class="icon icon--large icon-check-circle color--success"></i>'.html_safe
+            : '<i class="icon icon--large icon-times-circle color--error"></i>'.html_safe
           %>
         </td>
       </tr>
