Add nested properties support

--- a/app/assets/stylesheets/nexmo.scss
+++ b/app/assets/stylesheets/nexmo.scss
@@ -68,6 +68,7 @@ $border: 1px solid darken($mint, 5%);
 @import "objects/navigation";
 @import "objects/notices";
 @import "objects/tabs";
+@import "objects/table-list";
 @import "objects/truncate";
 @import "objects/loading-bar";
 @import "objects/video";
