--- a/app/views/open_api/show.html.erb
+++ b/app/views/open_api/show.html.erb
@@ -24,75 +24,7 @@
   <div class="columns small-12 medium-10 api-reference">
     <% @specification.raw['paths'].each do |path, methods| %>
       <% methods.each do |method, endpoint| %>
-        <div class="row-fluid flex">
-          <div class="columns small-12 medium-8">
-            <h2 id="<%= (endpoint['summary'] || endpoint['description']).parameterize %>"><%= endpoint['summary'] %></h2>
-            <p><%= endpoint['description'] %></p>
-
-            <div class="api-path">
-              <span class="api-path-method api-path-method--<%= method %>"><%= method.upcase %></span>
-              <code>
-                <span class="api-path-host"><%= @specification.raw['servers'].first['url'] %></span>
-                <%= path.gsub(/\{(.+?)\}/, '<span class="api-path-parameter">:\1</span>').html_safe %>
-              </code>
-            </div>
-
-            <% if endpoint['security'] %>
-              <% if endpoint['security'].include? 'jwt' %>
-                <h2>Authentication</h2>
-                <table>
-                  <thead>
-                    <th>Key</th>
-                    <th>Description</th>
-                    <th>Type</th>
-                    <th>Example</th>
-                    <th>Default</th>
-                    <th>Required</th>
-                  </thead>
-                  <tbody>
-                      <tr>
-                        <td><code>Authorization</code></td>
-                        <td>
-                          <b>Your JSON web token</b><br>
-                          <small><%= link_to "Read more about JWTs", "/concepts/guides/authentication#json-web-tokens-jwt" %></small>
-                        </td>
-                        <td><code>string</code></td>
-                        <td><code>Bearer &lt;JWT&gt;</code></td>
-                        <td><i>None</i></td>
-                        <td class="center">
-                          <i class="icon icon--large icon-check-circle color--success"></i>
-                        </td>
-                      </tr>
-                  </tbody>
-                </table>
-
-              <% end %>
-            <% end %>
-
-            <% if endpoint['parameters'] %>
-              <% if endpoint['parameters'].select { |parameter| parameter['in'] == 'path' }.any? %>
-                <h3>Parameters</h3>
-                <%= render 'parameters', parameters: endpoint['parameters'].select { |parameter| parameter['in'] == 'path' } %>
-              <% end %>
-
-              <% if endpoint['parameters'].select { |parameter| parameter['in'] != 'path' }.any? %>
-                <h3>Query</h3>
-                <%= render 'parameters', parameters: endpoint['parameters'].select { |parameter| parameter['in'] != 'path' } %>
-              <% end %>
-            <% end %>
-
-            <% if endpoint['requestBody'] %>
-              <h3>Query</h3>
-              <%=
-                render 'parameters', parameters: endpoint['requestBody']['content'].values[0]['schema']['properties'].map { |key, value| { 'name' => key }.merge(value) }
-              %>
-            <% end %>
-          </div>
-          <div class="columns small-12 medium-4 background--code">
-            <%= render_request(@specification_name, path, method) %>
-            <%= OpenApi::ExampleResponseResolver.new(@specification, path: path, method: method).html %>
-          </div>
-        </div>
+        <%= render 'endpoint', endpoint: OpenApi::ExampleResponseResolver.new(@specification, path: path, method: method) %>
       <% end %>
     <% end %>
   </div>
