--- a/app/assets/stylesheets/nexmo.scss
+++ b/app/assets/stylesheets/nexmo.scss
@@ -64,6 +64,7 @@ $border: 1px solid darken($mint, 5%);
 @import "objects/forms";
 @import "objects/github-cards";
 @import "objects/js-sequence-diagram";
+@import "objects/labels";
 @import "objects/masonry";
 @import "objects/navigation";
 @import "objects/notices";
