--- a/app/views/open_api/show.html.erb
+++ b/app/views/open_api/show.html.erb
@@ -10,7 +10,7 @@
                 <% methods.each do |method, endpoint| %>
                   <li>
                     <a href="#<%= (endpoint['summary'] || endpoint['description']).parameterize %>">
-                      <span class="label label--code label--positive"><%= method.upcase %></span>
+                      <span class="label label--code label--<%= method %>"><%= method.upcase %></span>
                       <%= endpoint['summary'] || endpoint['description'] %>
                     </a>
                   </li>
