update font to Lato

--- a/app/assets/stylesheets/nexmo.scss
+++ b/app/assets/stylesheets/nexmo.scss
@@ -63,7 +63,7 @@ $border: 1px solid $border-color;
 
 $golden-ratio: 1.618;
 
-$font-family: 'Averta', sans-serif;
+$font-family: 'Lato', sans-serif;
 
 @import "mixins";
 
