--- a/app/assets/stylesheets/objects/_button.scss
+++ b/app/assets/stylesheets/objects/_button.scss
@@ -2,7 +2,7 @@
   display: inline-block;
   background: $blue;
   color: $white;
-  font-family: 'Averta';
+  font-family: $font-family;
   font-size: 16px;
   line-height: 1.6;
   padding: 8px 12px;
