--- a/app/assets/stylesheets/_typography.scss
+++ b/app/assets/stylesheets/_typography.scss
@@ -1,40 +1,24 @@
 @font-face {
-    font-family: 'Averta';
-    src: font-url('intelligent_design_-_averta-light-webfont.woff2') format('woff2'),
-         font-url('intelligent_design_-_averta-light-webfont.woff') format('woff');
-    font-weight: 300;
+    font-family: 'Lato';
+    src: font-url('Lato-Regular.woff2') format('woff2'),
+         font-url('Lato-Regular.woff') format('woff');
+    font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
-    font-family: 'Averta';
-    src: font-url('intelligent_design_-_averta-regular-webfont.woff2') format('woff2'),
-         font-url('intelligent_design_-_averta-regular-webfont.woff') format('woff');
-    font-weight: 400;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'Averta';
-    src: font-url('intelligent_design_-_averta-regularitalic-webfont.woff2') format('woff2'),
-         font-url('intelligent_design_-_averta-regularitalic-webfont.woff') format('woff');
-    font-weight: 400;
-    font-style: italic;
-}
-
-@font-face {
-    font-family: 'Averta';
-    src: font-url('intelligent_design_-_averta-semibold-webfont.woff2') format('woff2'),
-         font-url('intelligent_design_-_averta-semibold-webfont.woff') format('woff');
+    font-family: 'Lato';
+    src: font-url('Lato-Semibold.woff2') format('woff2'),
+         font-url('Lato-Semibold.woff') format('woff');
     font-weight: 600;
     font-style: normal;
 }
 
 @font-face {
-    font-family: 'Averta';
-    src: font-url('intelligent_design_-_averta-bold-webfont.woff2') format('woff2'),
-         font-url('intelligent_design_-_averta-bold-webfont.woff') format('woff');
-    font-weight: 700;
+    font-family: 'Lato';
+    src: font-url('Lato-Black.woff2') format('woff2'),
+         font-url('Lato-Black.woff') format('woff');
+    font-weight: 900;
     font-style: normal;
 }
 
