--- a/app/views/tutorials/_index.html.erb
+++ b/app/views/tutorials/_index.html.erb
@@ -1,19 +1,19 @@
 <div class="masonry" data-turbolinks="false">
   <% @tutorials.each_with_index do |tutorial, index| %>
     <div class="item">
-      <a href="<%= tutorial.path %>" class="card card--with-icon">
-        <h2>
-          <span class="unstyled spacious">
-            <small><%= tutorial.subtitle %></small>
-            <%= tutorial.title %>
-          </span>
-        </h2>
-
-        <div class="card--with-icon__divider">
-          <i class="icon icon-book"></i>
+      <a href="<%= tutorial.path %>" class="Vlt-card Vlt-card--image Nxd-card--tutorials">
+        <div class="Vlt-card__image Vlt-card__image--tech Vlt-card__image--blue">
+          <div class="Vlt-badge Vlt-badge--large Vlt-badge--blue"><%= tutorial.subtitle %></div>
         </div>
-
-        <p class="color-text"><%= tutorial.description %></p>
+        <div class="Vlt-card__content">
+          <h2>
+              <span><%= tutorial.title %></span>
+          </h2>
+          <p><%= tutorial.description %></p>
+          <div class="Vlt-card__cta">
+            <div class="Vlt-btn Vlt-btn--secondary">Read more</div>
+          </div>
+        </div>
       </a>
     </div>
   <% end %>
