--- a/app/assets/volta/scss/components/_badge.scss
+++ b/app/assets/volta/scss/components/_badge.scss
@@ -10,7 +10,7 @@
 	line-height: 1;
 	margin: 0 10px;
 	padding: 4px 10px;
-	vertical-align: middle;
+	vertical-align: bottom;
 
 	&--red {
 		background: $red;
