--- a/app/views/layouts/api.html.erb
+++ b/app/views/layouts/api.html.erb
@@ -14,7 +14,7 @@
               <%= navigation_from_content(content: @content, title: @side_navigation_title) %>
             <% end %>
           </nav>
-          <div class="columns small-12 medium-9" id="primary-content">
+          <div class="columns small-12 medium-9 Vlt-card" id="primary-content">
             <%= yield %>
             <%= render partial: 'layouts/partials/feedback' %>
           </div>
