--- a/app/views/layouts/documentation.html.erb
+++ b/app/views/layouts/documentation.html.erb
@@ -10,7 +10,7 @@
           <nav class="columns small-12 medium-3 sidenav" id="sidenav" data-turbolinks-permanent>
             <%= sidenav(@sidenav_root) %>
           </nav>
-          <div data-turbolinks-permanent class="columns small-12 medium-9" id="primary-content">
+          <div data-turbolinks-permanent class="columns small-12 medium-9 Vlt-card" id="primary-content">
             <%= yield %>
             <%= render partial: 'layouts/partials/feedback' %>
           </div>
